--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ body {
     width: 510px;
     display: flex;
     flex-wrap: wrap;
-    font-family: 'NYTFranklin', 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-family: 'NYTFranklin';
     font-weight: 700; 
 }
 
@@ -56,6 +56,8 @@ body {
     width: 43px;
     height : 58px;
     border-radius: 4px;
+    font-family: 'NYTFranklin';
+    font-weight: 700; 
     border: none;
     background-color: #818384;
     margin: 4px;
