--- a/index.html
+++ b/index.html
@@ -141,9 +141,9 @@
 <body>
 
     <div class="game-container">
-        <div class="title-container">
+        <!-- <div class="title-container">
             <h1>Wordle</h1>
-        </div>
+        </div> -->
 
         <div class="message-container"></div>
 
